# SystemPay

./: .gitignore  CMakeLists.txt  README.md
assets/: resources.qrc
src/: main.cpp
src/database/: MongoConnection.cpp  MongoConnection.h
src/styles/: ButtonStyle.h  WidgetStyle.h  systemcolors.cpp  systemcolors.h
src/ui/app/: mainwindow.cc  mainwindow.h
src/ui/app/settings/: Settings.cc  Settings.h  ThemeManager.h
src/ui/profile/: Profile.settings.cc  Profile.settings.h
src/utils/: DonutWidget.cc  DonutWidget.h  GenerateMatStudent.h  PixmapUtils.h  QLMessage.h  systembuttons.cpp  systembuttons.h  tableutils.h
src/utils/app/: Version.h  settingsapp.cpp  settingsapp.h
